feat: register and login

--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "mesto-react",
   "version": "0.1.0",
-  "private": false,
-  "homepage": "https://elndry.github.io/mesto-react/",
+  "private": true,
+  "homepage": "https://elndry.github.io",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -10,7 +10,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.3.0",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -38,5 +38,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
